# obu-ros-driver

./: .gitignore  .gitmodules  README.md
c_ws/: CMakeLists.txt
c_ws/include/: obu_driver_ros.h
c_ws/include/unix_socket_pub_sub/: publisher.c  subscriber.c  unix_socket_pub_sub.h  unix_socket_publisher.c  unix_socket_subscriber.c
c_ws/include/v2x_msgs/builtin_interfaces/msg/: README
c_ws/include/v2x_msgs/msg/: acceleration_confidence.h  action_response.h  actual_number_of_passengers.h  adverse_weather_condition_adhesion_sub_cause_code.h  adverse_weather_condition_precipitation_sub_cause_code.h  adverse_weather_condition_visibility_sub_cause_code.h  advisory_speed.h  alacarte_container.h  alphabet_indicator.h  altitude_confidence.h  altitude_value.h  angle.h  angle_confidence.h  animal_subclass_type.h  antenna_offset_set.h  application_list.h  approach_id.h  area_polygon.h  area_rectangle.h  attribute_id_list.h  attribute_list.h  attributes.h  automated_vehicle_container.h  automated_vehicle_rules.h  avc_part.h  axle_weight_limits.h  banking_angle.h  basic_container.h  basic_vehicle_container_high_frequency.h  basic_vehicle_container_low_frequency.h  basic_vehicle_role.h  cam.h  cause_code.h  cen_dsrc_tolling_zone.h  channel_id.h  closed_lanes.h  collective_perception_message.h  computed_segment.h  condition.h  connecting_lane.h  (+346 more)
c_ws/include/v2x_msgs/msg/detail/: absolute_position__functions.c  absolute_position__type_support.c  absolute_position__type_support.h  absolute_position_w_altitude__functions.c  absolute_position_w_altitude__functions.h  absolute_position_w_altitude__struct.h  absolute_positions__functions.h  absolute_positions__rosidl_typesupport_fastrtps_c.h  absolute_positions_w_altitude__functions.c  absolute_positions_w_altitude__functions.h  absolute_positions_w_altitude__struct.h  acceleration_confidence__functions.c  acceleration_confidence__functions.h  acceleration_confidence__rosidl_typesupport_introspection_c.h  acceleration_confidence__type_support.c  acceleration_confidence__type_support.h  acceleration_control__functions.c  acceleration_control__functions.h  acceleration_control__rosidl_typesupport_fastrtps_c.h  acceleration_control__rosidl_typesupport_introspection_c.h  acceleration_control__struct.h  acceleration_control__type_support.c  acceleration_control__type_support.h  accident_sub_cause_code__functions.c  accident_sub_cause_code__functions.h  accident_sub_cause_code__rosidl_typesupport_fastrtps_c.h  accident_sub_cause_code__rosidl_typesupport_introspection_c.h  accident_sub_cause_code__struct.h  accident_sub_cause_code__type_support.c  accident_sub_cause_code__type_support.h  action_id__functions.c  action_id__functions.h  action_id__rosidl_typesupport_fastrtps_c.h  action_id__struct.h  action_request__functions.h  action_response__functions.c  action_response__functions.h  action_response__rosidl_typesupport_fastrtps_c.h  action_response__struct.h  action_response__type_support.c  (+2794 more)
c_ws/include/v2x_msgs/rcutils/: README  allocator.c
c_ws/include/v2x_msgs/rosidl_typesupport_introspection_c/: README
c_ws/include/v2x_msgs/v2x_msgs/msg/: absolute_position.h  absolute_position_w_altitude.h  absolute_positions.h  absolute_positions_w_altitude.h  acceleration_control.h  accident_sub_cause_code.h  action_id.h  action_request.h  action_type.h  add_rq.h  adverse_weather_condition_extreme_weather_condition_sub_cause_code.h  advisory_speed_list.h  advisory_speed_type.h  allowed_maneuvers.h  altitude.h  animal_subclass.h  any_catalogue.h  area_circular.h  (+394 more)
c_ws/src/: obu_ros_driver.c
ros_humble_docker/ros2_ws/src/obu_ros_driver/: CMakeLists.txt  package.xml
(+2740 files in other folders)
