<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obu_ros_driver</name>
  <version>0.0.0</version>
  <description>ROS2 Driver to send and receive C-V2X though On-Board Units (OBU) using UNIX-Socket embedded in the OBU using Docker.</description>
  <maintainer email="gabriel.rocha@ieee.org">toffanetto</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>v2x_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
